--- a/.gitignore
+++ b/.gitignore
@@ -46,7 +46,20 @@
 *.mod*
 *.cmd
 .tmp_versions/
+.cache/
 modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
