--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,21 @@ cmake_minimum_required(VERSION "3.26.4")
 
 project("app2")
 
+set(CMAKE_C_COMPILER "clang")
+set(CMAKE_CXX_COMPILER "clang")
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON CACHE INTERNAL "")
+
+if(CMAKE_EXPORT_COMPILE_COMMANDS)
+  set(CMAKE_CXX_STANDARD_INCLUDE_DIRECTORIES 
+      ${CMAKE_CXX_IMPLICIT_INCLUDE_DIRECTORIES})
+endif()
+
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(mariadb REQUIRED IMPORTED_TARGET mysqlclient)
+
 add_executable(
   ${PROJECT_NAME}
   "app2.c"
 )
 
-target_link_libraries(app2 "-L/nix/store/pjk6gld9s6434ykb76cmqpgxbqw8sf4b-mariadb-connector-c-3.3.5/lib/mariadb" "mariadb")
+target_link_libraries(app2 PRIVATE PkgConfig::mariadb)
